syntax = "proto3";
package user;
import "google/type/date.proto";
import "google/rpc/status.proto";

service AppUserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
  rpc AuthenticateUser(AuthenticateUserRequest) returns (AuthenticateUserResponse) {}
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
  string password = 3;
  google.type.Date birthdate = 4;
}

message CreateUserResponse {
  string token = 1;
  ArcadePhitoUser appUser = 2;
  google.rpc.Status status = 3;
}

message AuthenticateUserRequest {
  string name = 1;
  string password = 2;
}

message AuthenticateUserResponse {
  string token = 1;
  ArcadePhitoUser appUser = 2;
  google.rpc.Status status = 3;
}

message ArcadePhitoUser {
  string name = 1;
  string email = 2;
  map<string, string> records = 3;
  google.type.Date birthdate = 4;
}
