syntax = "proto3";
package  developer;
import "google/rpc/status.proto";

service DeveloperService {
    rpc AuthenticateDeveloper(AuthRequest) returns (AuthResponse);
}

message AuthRequest {
    string apiKey = 1;
    string apiSecret = 2;
    string developerId = 3;
}

message AuthResponse {
    google.rpc.Status status = 1;
    string token = 2;
}
